--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Basic reset and default configurations to build stylesheets from",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run lint",
     "lint": "node_modules/sass-lint/bin/sass-lint.js -v src",
     "build:docs": "./node_modules/sassdoc/bin/sassdoc src"
   },
   "author": "Peter Monks",
   "license": "Apache-2.0",
   "dependencies": {
+    "pre-commit": "^1.2.2",
     "sassdoc": "^2.1.20"
-  }
+  },
+  "pre-commit": [ "build:docs" ]
 }
