--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run lint",
-    "lint": "node_modules/sass-lint/bin/sass-lint.js -c sassdoc.yaml -v src",
-    "build:docs": "./node_modules/sassdoc/bin/sassdoc src"
+    "lint": "node_modules/sass-lint/bin/sass-lint.js -v src",
+    "build:docs": "./node_modules/sassdoc/bin/sassdoc -c sassdoc.yaml src"
   },
   "author": "Peter Monks",
   "license": "Apache-2.0",
