--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "npm run lint",
     "lint": "node_modules/sass-lint/bin/sass-lint.js -v src",
-    "build:docs": "./node_modules/sassdoc/bin/sassdoc -c sassdoc.yaml src"
+    "build:docs": "./node_modules/sassdoc/bin/sassdoc -c sassdoc.yaml src",
+    "build:incorporate": "git add docs/"
   },
   "author": "Peter Monks",
   "license": "Apache-2.0",
@@ -14,5 +15,8 @@
     "pre-commit": "^1.2.2",
     "sassdoc": "^2.1.20"
   },
-  "pre-commit": [ "build:docs" ]
+  "pre-commit": [
+    "build:docs",
+    "build:incorporate"
+  ]
 }
